# result_of

./: CMakeLists.txt  Config.cmake.in  README.md
cmake/: common.cmake
include/lite/: result_of.hpp
src/: main.cpp
